tests/fail/fail_bare_array_without_array_target.kr
fn inisiu() {
    nter valor = [1, 2];
}
